[gd_scene load_steps=13 format=3 uid="uid://ci4p06lu8tqqi"]

[ext_resource type="Script" path="res://Notebook/Notebook.gd" id="1_vu0ue"]
[ext_resource type="Texture2D" uid="uid://c18xofugrp4e8" path="res://Notebook/linedPaper.png" id="2_ww22m"]
[ext_resource type="Script" path="res://Notebook/Paper.gd" id="3_oj760"]
[ext_resource type="Texture2D" uid="uid://b8wiihxhkrqmf" path="res://Notebook/block.png" id="4_1euce"]
[ext_resource type="Texture2D" uid="uid://bp7lh1xef6arg" path="res://Notebook/rocks.png" id="5_pqcoo"]
[ext_resource type="Script" path="res://Notebook/Navigation.gd" id="6_drquv"]
[ext_resource type="PackedScene" uid="uid://bgp7v5wavpurg" path="res://Characters/Character.tscn" id="7_bcldc"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_eu2bq"]
texture = ExtResource("2_ww22m")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0

[sub_resource type="TileSet" id="TileSet_xjtio"]
tile_size = Vector2i(64, 64)
navigation_layer_0/layers = 1
sources/0 = SubResource("TileSetAtlasSource_eu2bq")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_552k1"]
texture = ExtResource("4_1euce")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_aq7gs"]
texture = ExtResource("5_pqcoo")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_mjrca"]
tile_size = Vector2i(64, 64)
sources/0 = SubResource("TileSetAtlasSource_552k1")
sources/1 = SubResource("TileSetAtlasSource_aq7gs")

[node name="Notebook" type="Node2D"]
script = ExtResource("1_vu0ue")

[node name="Paper" type="TileMap" parent="."]
tile_set = SubResource("TileSet_xjtio")
cell_quadrant_size = 64
format = 2
layer_0/tile_data = PackedInt32Array(0, 0, 0, 65536, 0, 1, 1, 65536, 0, 131072, 0, 1, 196608, 0, 1, 262144, 0, 1, 327680, 0, 1, 393216, 0, 1, 458752, 0, 1, 524288, 0, 1, 589824, 0, 2, 589825, 65536, 2, 524289, 65536, 1, 458753, 65536, 1, 393217, 65536, 1, 327681, 65536, 1, 262145, 65536, 1, 196609, 65536, 1, 131073, 65536, 1, 65537, 65536, 1, 2, 131072, 0, 3, 131072, 0, 4, 131072, 0, 5, 131072, 0, 6, 131072, 0, 7, 131072, 0, 8, 131072, 0, 9, 131072, 0, 10, 131072, 0, 11, 131072, 0, 12, 131072, 0, 13, 131072, 0, 14, 131072, 0, 15, 131072, 0, 17, 262144, 0, 16, 196608, 0, 65553, 262144, 1, 131089, 262144, 1, 196625, 262144, 1, 262161, 262144, 1, 327697, 262144, 1, 393233, 262144, 1, 458769, 262144, 1, 524305, 262144, 1, 589841, 262144, 2, 589840, 196608, 2, 524304, 196608, 1, 458768, 196608, 1, 393232, 196608, 1, 327696, 196608, 1, 262160, 196608, 1, 196624, 196608, 1, 131088, 196608, 1, 65552, 196608, 1, 589826, 131072, 2, 589827, 131072, 2, 589828, 131072, 2, 589829, 131072, 2, 589830, 131072, 2, 589831, 131072, 2, 589832, 131072, 2, 589833, 131072, 2, 589834, 131072, 2, 589835, 131072, 2, 589836, 131072, 2, 589837, 131072, 2, 589838, 131072, 2, 589839, 131072, 2, 524290, 131072, 1, 458754, 131072, 1, 393218, 131072, 1, 327682, 131072, 1, 262146, 131072, 1, 196610, 131072, 1, 131074, 131072, 1, 65538, 131072, 1, 65539, 131072, 1, 131075, 131072, 1, 196611, 131072, 1, 262147, 131072, 1, 327683, 131072, 1, 393219, 131072, 1, 458755, 131072, 1, 524291, 131072, 1, 524292, 131072, 1, 458756, 131072, 1, 393220, 131072, 1, 327684, 131072, 1, 262148, 131072, 1, 196612, 131072, 1, 131076, 131072, 1, 65540, 131072, 1, 65541, 131072, 1, 131077, 131072, 1, 196613, 131072, 1, 262149, 131072, 1, 327685, 131072, 1, 393221, 131072, 1, 458757, 131072, 1, 524293, 131072, 1, 524294, 131072, 1, 458758, 131072, 1, 393222, 131072, 1, 327686, 131072, 1, 262150, 131072, 1, 196614, 131072, 1, 131078, 131072, 1, 65542, 131072, 1, 65543, 131072, 1, 131079, 131072, 1, 196615, 131072, 1, 262151, 131072, 1, 327687, 131072, 1, 393223, 131072, 1, 458759, 131072, 1, 524295, 131072, 1, 524296, 131072, 1, 458760, 131072, 1, 393224, 131072, 1, 327688, 131072, 1, 262152, 131072, 1, 196616, 131072, 1, 131080, 131072, 1, 65544, 131072, 1, 65545, 131072, 1, 131081, 131072, 1, 196617, 131072, 1, 262153, 131072, 1, 327689, 131072, 1, 393225, 131072, 1, 458761, 131072, 1, 524297, 131072, 1, 524298, 131072, 1, 458762, 131072, 1, 393226, 131072, 1, 327690, 131072, 1, 262154, 131072, 1, 196618, 131072, 1, 131082, 131072, 1, 65546, 131072, 1, 65547, 131072, 1, 131083, 131072, 1, 196619, 131072, 1, 262155, 131072, 1, 327691, 131072, 1, 393227, 131072, 1, 458763, 131072, 1, 524299, 131072, 1, 524300, 131072, 1, 458764, 131072, 1, 393228, 131072, 1, 327692, 131072, 1, 262156, 131072, 1, 196620, 131072, 1, 131084, 131072, 1, 65548, 131072, 1, 65549, 131072, 1, 131085, 131072, 1, 196621, 131072, 1, 262157, 131072, 1, 327693, 131072, 1, 393229, 131072, 1, 458765, 131072, 1, 524301, 131072, 1, 524302, 131072, 1, 458766, 131072, 1, 393230, 131072, 1, 327694, 131072, 1, 262158, 131072, 1, 196622, 131072, 1, 131086, 131072, 1, 65550, 131072, 1, 65551, 131072, 1, 131087, 131072, 1, 196623, 131072, 1, 262159, 131072, 1, 327695, 131072, 1, 393231, 131072, 1, 458767, 131072, 1, 524303, 131072, 1)
script = ExtResource("3_oj760")

[node name="Ink" type="TileMap" parent="Paper"]
modulate = Color(1, 1, 1, 0.439216)
tile_set = SubResource("TileSet_mjrca")
cell_quadrant_size = 64
format = 2
layer_0/tile_data = PackedInt32Array(131080, 0, 0, 131079, 0, 0, 131078, 0, 0, 196614, 0, 0, 262150, 0, 0, 327686, 0, 0, 393222, 0, 0, 458758, 0, 0, 458759, 0, 0, 262152, 0, 0, 327688, 0, 0, 131081, 0, 0, 131082, 0, 0, 196618, 0, 0, 262154, 0, 0, 327690, 0, 0, 393226, 0, 0, 458762, 0, 0, 458761, 0, 0, 196617, 1, 0, 262153, 1, 0, 393225, 1, 0, 327689, 1, 0, 524297, 0, 0, 589833, 0, 0)

[node name="Navigation" type="Control" parent="Paper"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("6_drquv")

[node name="Icon" parent="." instance=ExtResource("7_bcldc")]
modulate = Color(1, 0, 1, 1)
position = Vector2(31, 31)
char_name = "Bob"
start_pos = Vector2i(1, 1)

[node name="Icon2" parent="." instance=ExtResource("7_bcldc")]
modulate = Color(0, 1, 0, 1)
position = Vector2(103, 33)
char_name = "Jack"
start_pos = Vector2i(8, 3)

[connection signal="select_map_item" from="Paper" to="." method="_on_paper_select_map_item"]
[connection signal="select_tile" from="Paper" to="Icon" method="_on_paper_select_tile"]
[connection signal="select_tile" from="Paper" to="Icon2" method="_on_paper_select_tile"]
[connection signal="change_turn" from="Icon" to="." method="_on_icon_change_turn"]
[connection signal="change_turn" from="Icon2" to="." method="_on_icon_change_turn"]
